# cmd/api/docs/swagger.json
@@ -943,7 +943,7 @@
                     {
                         "type": "string",
                         "description": "Identificador de la caratula",
-                        "name": "q",
+                        "name": "identificador",
                         "in": "query",
                         "required": true
                     }
@@ -1003,7 +1003,7 @@
                     {
                         "type": "string",
                         "description": "Identificador de la caratula",
-                        "name": "q",
+                        "name": "identificador",
                         "in": "query",
                         "required": true
                     }
@@ -1063,7 +1063,7 @@
                     {
                         "type": "string",
                         "description": "Identificador de la caratula",
-                        "name": "q",
+                        "name": "identificador",
                         "in": "query",
                         "required": true
                     }
